add body and logic
Co-authored-by: Ryan Bass <theryanbass@gmail.com>
Co-authored-by: Daniel Lindsey <daniellindsey85254@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
 #selectMovie, #receipt {
   border: solid black;
 }
+
+.receipt-col {
+  border-right: 1px solid lightgray;
+}
+.delete-button {
+  color: red;
+  font-weight: bold;
+}
