--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,15 @@
   color: red;
   font-weight: bold;
 }
+
+body {
+  background-image:url("../img/background.jpg");  
+  background-repeat: repeat; 
+}
+
+.col-md {
+  background-color: white;
+  margin-left: 10px;
+  margin-top: 10px;
+  min-height: 500px;
+}
